[package]
name = "s3du"
description = "Command line utility for showing space used in AWS S3 buckets"
version = "1.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/phyber/s3du"
repository = "https://github.com/phyber/s3du"
rust-version = "1.78.0"
resolver = "2"
authors = [
    "David O'Rourke <david.orourke@gmail.com>",
]
categories = [
    "command-line-utilities",
    "filesystem",
]
keywords = [
    "aws",
    "cli",
    "s3",
]
exclude = [
    ".gitignore",
    ".github",
]

[profile.release]
codegen-units = 1
lto = true

[features]
# Build with both CloudWatch and S3 support by default
default = [
    "cloudwatch",
    "s3",
]

# Only CloudWatch support
cloudwatch = [
    "aws-sdk-cloudwatch",
]

# Only S3 support
s3 = [
    "aws-sdk-s3",
    "http",
]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-types = "1.3.3"
humansize = "2.1.3"
once_cell = "1.20.2"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.aws-config]
version = "1.5.10"
features = [
    "behavior-version-latest",
]

[dependencies.aws-sdk-cloudwatch]
version = "1.55.0"
optional = true

[dependencies.aws-sdk-s3]
version = "1.62.0"
optional = true

[dependencies.clap]
version = "4.5.21"
default-features = false
features = [
    "cargo",
    "color",
    "deprecated",
    "env",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
    "wrap_help",
]

[dependencies.http]
version = "1.1"
optional = true

[dependencies.tokio]
version = "1.41"
features = [
    "macros",
    "rt-multi-thread",
]

[dev-dependencies]
aws-smithy-types = "1.2.9"
http = "1.1"
pretty_assertions = "1.4"

[dev-dependencies.aws-smithy-runtime]
version = "1.7.3"
features = [
    "client",
    "test-util",
]

# Hardcoded credentials are only used in tests.
[dev-dependencies.aws-credential-types]
version = "1.2.1"
features = [
    "test-util",
]
